# ugc-net-backend

./: .env.example  .env.local.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dev-requirements.txt  docker-compose.yml  promtail-config.yml  pyproject.toml  pytest.ini  requirements.txt  test_ws.py  test_ws_on_vm.py  test_ws_remote.py  verify_deployment.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_rename_metadata.py  0003_composite_questions.py  0003_taxonomical_models.py  0004_add_quiz_version_id.py  26fe05d99c29_add_stats_fields.py  cdf7c4134f2b_add_google_id_to_users.py  e32ab8063a90_add_explanation_column_to_questions.py
app/: __init__.py  main.py
app/api/v1/: attempts.py  auth.py  history.py  media.py  questions.py  quizzes.py  routes.py  schemas.py  stats.py  taxonomy.py  ws_attempts.py
app/core/: config.py  logging.py  prompts.py  security.py
app/db/: base.py  models.py
app/middleware/: request_id.py
app/services/: attempt_service.py  stats_service.py
docs/: MIGRATIONS.md  plan.md
docs/api/: openapi.yaml
scripts/: analyze_taxonomy_mismatches.py  debug_paths.py  deploy_to_azure.sh  fix_taxonomy_links.py  import_questions.py  run_migrations.sh  taxonomy-seeders.py  taxonomy_convert_to_md.py  verify_import.py  wait_for_db.sh
tests/: conftest.py  test_advanced_grading.py  test_api_endpoints.py  test_api_v1.py  test_database.py  test_grading.py  test_question_taxonomy.py  test_quiz_attempts.py  test_recursive_filtering.py  test_stats_engine.py  test_taxonomy.py  test_ws_attempts.py
