[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=23.0",
    "alembic>=1.17.1",
    "asyncpg>=0.27",
    "bcrypt>=4.0",
    "email-validator>=2.0",
    "fastapi>=0.95",
    "google-genai>=1.52.0",
    "httpx>=0.24",
    "psycopg2-binary>=2.9",
    "pyjwt>=2.8",
    "python-multipart>=0.0.6",
    "sqlalchemy>=1.4",
    "uvicorn[standard]>=0.22",
]

[tool.poetry.dev-dependencies]
# Runtime dependencies are tracked in requirements.txt for Docker-based development.

[tool.tasks]
# Informal task definitions (referenced by Makefile). These are for discoverability only.
compose_up = "docker-compose -f docker-compose.yml up -d --build"
compose_down = "docker-compose -f docker-compose.yml down -v"
migrate = "make migrate"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "testcontainers>=4.13.3",
]
